# RETROLIB

./: .gitignore  80x86 Integer Instruction Set 8088 - Pentium.txt  LICENSE  LOG.TXT  README.md  bios_memory_size.err  bios_video_services.err  cga_detect_adapter.err  debug_macros.err  dos_services_files.err  ega_detect_adapter.err  hga_detect_adapter.err  hw_detect_crtc.err  hw_detect_graphics_adapter.err  main.c  main.err  retrolib.map  retrolib.mk  retrolib.mk1  retrolib.sym  retrolib.tgt  retrolib.wpj  vga_detect_adapter.err
src/: CMakeLists.txt  bld.sh  cmk.sh  exportOW2-DOS-16bit.sh  main.c  ow2.sh  todo.md
src/BIOS/: bios.h  bios_equipment_flags.h  bios_memory_size.c  bios_memory_size.h  bios_system_services.h  bios_timer_io_constants.h  bios_timer_io_services.c  bios_timer_io_services.h  bios_timer_io_types.h  bios_tools_timer.c  bios_tools_timer.h  bios_video_services.c  bios_video_services.h  bios_video_services_constants.h  bios_video_services_types.h
src/CGA/: cga.h  cga_colours.h  cga_constants.h  cga_detect_adapter.c  cga_detect_adapter.h  cga_mode4_constants.h  cga_types.h
src/DBG/: debug_macros.c  debug_macros.h
src/DEMOS/: demo_bresenham.c  demo_bresenham.h  demo_circles.c  demo_circles.h  demo_display_buffer.c  demo_display_buffer.h  demo_hga.h  demo_hw.h  demo_lines.c  demo_lines.h  demo_pixels.c  demo_pixels.h  demo_rectangles.c  demo_rectangles.h  pixelate.c  pixelate.h  text2bit.c  text2bit.h  text2pix.c  text2pix.h
src/DOS/: dos.h  dos_error_messages.h  dos_services.c  dos_services.h  dos_services_3x.c  dos_services_3x.h  dos_tools_files.c  (+8 more)
(+209 files in other folders)
